--- a/mystyle.css
+++ b/mystyle.css
@@ -1,16 +1,22 @@
 body {
-    background-color:white;
-}
-#title{
-    color:SaddleBrown;
-    text-align:center;
-}
+  background-color: white; }
+
+#title {
+  color: SaddleBrown;
+  text-align: center; }
+
 .center {
-    display:block;
-    margin-left:auto;
-    margin-right:auto;
-    width:70%;
-}
-.center-text{
-    text-align:center;
-}
+  display: block;
+  margin-left: auto;
+  margin-right: auto; }
+  @media (min-width: 500px) {
+    .center {
+      width: 70%; } }
+  @media (max-width: 499px) {
+    .center {
+      width: 25%; } }
+
+.center-text {
+  text-align: center; }
+
+/*# sourceMappingURL=mystyle.css.map */
