--- a/mystyle.css
+++ b/mystyle.css
@@ -1,22 +1,40 @@
 body {
-  background-color: white; }
+  background-color: Moccasin; }
 
-#title {
+#title, #main-title {
   color: SaddleBrown;
   text-align: center; }
+
+#main-title {
+  text-transform: uppercase;
+  letter-spacing: 3px; }
 
 .center {
   display: block;
   margin-left: auto;
-  margin-right: auto; }
+  margin-right: auto;
+  padding-bottom: 25px; }
   @media (min-width: 500px) {
     .center {
       width: 70%; } }
   @media (max-width: 499px) {
     .center {
-      width: 25%; } }
+      width: 40%; } }
 
-.center-text {
-  text-align: center; }
+.text-style {
+  padding-left: 25px;
+  padding-right: 25px; }
+
+table {
+  border-collapse: collapse;
+  border: 1px solid black;
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  padding-bottom: 25px; }
+
+th, td {
+  border: 1px solid black;
+  padding: 15px; }
 
 /*# sourceMappingURL=mystyle.css.map */
